Changes done are as follows, 1. Added legends to map with colour in the layer selection drop down 2. Fixed the alignment for the layer selection controls. 3. Changes to show the grey map as background.

--- a/wordpress/wp-content/uploads/custom-css-js/653.css
+++ b/wordpress/wp-content/uploads/custom-css-js/653.css
@@ -3313,6 +3313,7 @@ section img.full-width-image{
   line-height: 1.167;
   padding-bottom: 25%;
 }
+
 .container-fluid.story .alternate-row:nth-child(2n+1) {
     background-color: #f9f9f9;
 }
@@ -3353,5 +3354,25 @@ section img.full-width-image{
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
+
+
+/*Leaflet overriden styles*/
+.leaflet-control-layers-expanded{
+	padding : 1rem !important;	
+}
+
+.leaflet-control-layers label {
+    padding: 0.25rem;
+    text-align: left !important;
+}
+
+.leaflet-legend-color{
+    width: 12px;
+    height: 12px;
+    display: inline-block;
+    margin: 0 0.5rem;
+}
+	
+
 </style>
 <!-- end Simple Custom CSS and JS -->
